Fix spacing in mobile (xs) view

--- a/style/greyskull.css
+++ b/style/greyskull.css
@@ -29,6 +29,10 @@ h1 {
     text-align: center;
 }
 
+.primary-sidebar {
+  margin: 0 15px;
+}
+
 .card-two {
     background-color: #a6d8de;
     color: #fff;
